k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: tiffea/devops-project1:latest
          ports:
            - containerPort: 5000
            #откуда брать конфиг
