k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
